create certificate file for user any course

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 		}
 	},
     "require": {
-        "verot/class.upload.php": "^2.0"
+        "verot/class.upload.php": "^2.0",
+        "phpoffice/phpword": "^0.17.0"
     }
 }
